<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowRecords"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightSky"
    android:id="@+id/show"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightSky"
        android:text="Records"
        android:fontFamily="@font/muli_extrabold"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        />

    <ListView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@color/lightWhite"
        android:divider="@color/lighter_blue"
        android:id="@+id/record_listView">
    </ListView>

</LinearLayout>