<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@color/lightSky"
    android:gravity="center_horizontal"
    android:id="@+id/home"
    >



    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/heart1"/>


    <Button
        android:id="@+id/store_records"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:backgroundTint="#3C3C3A"
        android:textColor="@color/light_gray"
        android:text="Store Record"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/show_records"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:backgroundTint="#3C3C3A"
        android:textColor="@color/light_gray"
        android:text="Show Record"/>

</LinearLayout>